add referee list api for a conference
